--- a/index.html
+++ b/index.html
@@ -7,3 +7,7 @@
    <script src="export.js"></script>
 
 <div id="container"></div>
+<p class="highcharts-description">
+        Bar chart showing the world industrial roundwood production by countries from 1961 to 2021.
+    </p>
+</figure>
