--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <div id="container"></div>
 <p class="highcharts-description">
-        Bar chart showing the world industrial roundwood production by countries from 1961 to 2021.
+        Bar chart showing the world industrial roundwood export from 1961 to 2021.
     </p>
 </figure>
