--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
    <script src="export.js"></script>
 
 <div id="container"></div>
+<button onclick="gotoLink(this)" value= "https://mc265.github.io/export-of-forest-products/">Industrial Roundwood</button>
+<button onclick="gotoLink(this)" value= "https://mc265.github.io/export-of-forest-products/">Wood fuel</button>
+<button onclick="gotoLink(this)" value= "https://mc265.github.io/export-of-forest-products/">Wood pulp</button>
+<button id="button" class="autocompare">Sawnwood</button>
+<button id="button" class="autocompare">Paper and paperboard</button>
+<button id="button" class="autocompare">Wood based Panels</button>
+<button id="button" class="autocompare">Wood pellets and other agglomerates</button>
+<script>
+  function gotoLink(link){
+    console.log(link.value);
+    location.href=link.value;
+  };
+  
 <p class="highcharts-description">
         Bar chart showing the world industrial roundwood export from 1961 to 2021.
     </p>
