--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <script src="export.js"></script>
 
 <div id="container"></div>
-<button onclick="gotoLink(this)" value= "https://mc265.github.io/export-of-forest-products/">Industrial Roundwood</button>
+<button onclick="gotoLink(this)" value= "https://mc265.github.io/industrial-rw-expo/">Industrial Roundwood</button>
 <button onclick="gotoLink(this)" value= "https://mc265.github.io/export-of-forest-products/">Wood pulp</button>
 <button id="button" class="autocompare">Sawnwood</button>
 <button id="button" class="autocompare">Paper and paperboard</button>
