--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <div id="container"></div>
 <button onclick="gotoLink(this)" value= "https://mc265.github.io/industrial-rw-expo/">Industrial Roundwood</button>
-<button onclick="gotoLink(this)" value= "https://mc265.github.io/export-of-forest-products/">Wood pulp</button>
+<button onclick="gotoLink(this)" value= "https://mc265.github.io/wood-pulp-export/">Wood pulp</button>
 <button id="button" class="autocompare">Sawnwood</button>
 <button id="button" class="autocompare">Paper and paperboard</button>
 <button id="button" class="autocompare">Wood based Panels</button>
