--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     console.log(link.value);
     location.href=link.value;
   };
-  
+  </script>
 <p class="highcharts-description">
         Bar chart showing the world industrial roundwood export from 1961 to 2021.
     </p>
