--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   };
   </script>
 <p class="highcharts-description">
-        Bar chart showing the world industrial roundwood export from 1961 to 2021.
+          Forest products export  from 1961 to 2021.
     </p>
 </figure>
